; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8188eu/hal/extr_rtl8188e_hal_init.c_Hal_EfuseParseIDCode88E.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8188eu/hal/extr_rtl8188e_hal_init.c_Hal_EfuseParseIDCode88E.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adapter = type { i32 }
%struct.eeprom_priv = type { i32 }

@RTL_EEPROM_ID = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [29 x i8] c"EEPROM ID(%#x) is invalid!!\0A\00", align 1
@.str.1 = private unnamed_addr constant [20 x i8] c"EEPROM ID = 0x%04x\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Hal_EfuseParseIDCode88E(%struct.adapter* %0, i32* %1) #0 {
  %3 = alloca %struct.adapter*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.eeprom_priv*, align 8
  %6 = alloca i64, align 8
  store %struct.adapter* %0, %struct.adapter** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load %struct.adapter*, %struct.adapter** %3, align 8
  %8 = call %struct.eeprom_priv* @GET_EEPROM_EFUSE_PRIV(%struct.adapter* %7)
  store %struct.eeprom_priv* %8, %struct.eeprom_priv** %5, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* %9, align 4
  %11 = call i64 @le16_to_cpu(i32 %10)
  store i64 %11, i64* %6, align 8
  %12 = load i64, i64* %6, align 8
  %13 = load i64, i64* @RTL_EEPROM_ID, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %20

15:                                               ; preds = %2
  %16 = load i64, i64* %6, align 8
  %17 = call i32 @DBG_88E(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i64 %16)
  %18 = load %struct.eeprom_priv*, %struct.eeprom_priv** %5, align 8
  %19 = getelementptr inbounds %struct.eeprom_priv, %struct.eeprom_priv* %18, i32 0, i32 0
  store i32 1, i32* %19, align 4
  br label %23

20:                                               ; preds = %2
  %21 = load %struct.eeprom_priv*, %struct.eeprom_priv** %5, align 8
  %22 = getelementptr inbounds %struct.eeprom_priv, %struct.eeprom_priv* %21, i32 0, i32 0
  store i32 0, i32* %22, align 4
  br label %23

23:                                               ; preds = %20, %15
  %24 = load i64, i64* %6, align 8
  %25 = call i32 @DBG_88E(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0), i64 %24)
  ret void
}

declare dso_local %struct.eeprom_priv* @GET_EEPROM_EFUSE_PRIV(%struct.adapter*) #1

declare dso_local i64 @le16_to_cpu(i32) #1

declare dso_local i32 @DBG_88E(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
